--- a/build.gradle
+++ b/build.gradle
@@ -12,28 +12,19 @@ repositories {
     mavenCentral()
 }
 
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
-    }
-}
-
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.kafka:spring-kafka'
-    implementation 'org.apache.kafka:kafka-streams:3.6.1'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.postgresql:postgresql:42.7.1'
+    implementation 'org.apache.tika:tika:2.9.1'
+
+    implementation 'org.mapstruct:mapstruct:1.4.2.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
 
     compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.22'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.kafka:spring-kafka-test'
-
-    testImplementation 'org.testcontainers:testcontainers:1.18.1'
-    testImplementation 'org.testcontainers:kafka:1.18.1'
-    testImplementation 'org.testcontainers:junit-jupiter:1.18.0'
-    testImplementation 'org.awaitility:awaitility:4.2.0'
-    testImplementation 'org.apache.kafka:kafka-streams-test-utils:3.6.1'
-
 }
 
 test {
