--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     password: password
     username: postgres
-    url: jdbc:postgresql://localhost:5432/song_db
+    url: jdbc:postgresql://host.docker.internal:5432/song_db
   jpa:
     hibernate:
       ddl-auto: create
