--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     password: password
-    username: postgres
-    url: jdbc:postgresql://host.docker.internal:5432/song_db
+    username: username
+    url: jdbc:postgresql://localhost:5432/song_db
   jpa:
     hibernate:
       ddl-auto: create
